Fixes contrast issue with submit button

--- a/css/contact.css
+++ b/css/contact.css
@@ -53,7 +53,7 @@ input{
     padding: 0.25em 0.5em;
     background-color: white;
     /* color for button that has good contrast */
-    color: rgb(236, 96, 173);
+    color: var(--background-main);
     font-weight: bold;
     text-decoration: none;
 }
